# route-weaver

./: .gitignore  Cargo.toml  README.md  build-linux-debug.sh  build-linux.sh  build-windows-debug.sh  build-windows.sh
common/: Cargo.toml
common/src/: address.rs  error.rs  lib.rs  message.rs  noise.rs  router.rs  transport.rs
plugins/bluetooth-transport/src/: lib.rs
plugins/tcp-transport/: Cargo.toml
plugins/tcp-transport/src/: lib.rs
plugins/unix-transport/src/: lib.rs
router/: Cargo.toml
router/src/: connection_manager.rs  gateway.rs  listener.rs  main.rs  message.rs  message_socket.rs  noise.rs  p2p.rs  router.rs
services/fs/: Cargo.toml
services/ipv6/: Cargo.toml
services/ipv6/src/: main.rs
transports/bluetooth-transport/: Cargo.toml
transports/bluetooth-transport/src/: lib.rs
transports/tcp-transport/: Cargo.toml
transports/tcp-transport/src/: lib.rs
transports/unix-transport/: Cargo.toml
transports/unix-transport/src/: lib.rs
