[workspace]
resolver = "2"
members = ["router", "common", "transports/*", "services/*"]

[workspace.dependencies]
snow = "0.9"
log = "0.4"
once_cell = "1.19"
tower = { version = "0.4", features = ["full"] }
tokio-tower = "0.6"
serde_with = "3.6"
zeroize = { version = "1.7", features = ["derive"] }
# For several reasons we don't use this for anything but interdaemon communication
async-bincode = "0.7"
