[package]
name = "route-weaver-common"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", default-features = false }
tokio-util = { version = "0.7", features = ["codec", "io-util"] }
zeroize = { version = "1.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
snow = { workspace = true }
anyhow = "1.0"
lz4_flex = "0.11"
either = "1.10"
log = { workspace = true }
async-trait = "0.1"
sha2 = "0.10"
arrayvec = { version = "0.7", features = ["serde", "zeroize"] }
once_cell = "1.19"
miniz_oxide = "0.7"
data-encoding = "2.5"
serde_with = { workspace = true }
