[package]
name = "route-weaver-common"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", default-features = false }
tokio-util = { version = "0.7", features = ["codec", "io-util"] }
zeroize = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
snow = { workspace = true }
either = "1.10"
async-trait = "0.1"
once_cell = "1.19"
data-encoding = "2.5"
serde_with = { workspace = true }
thiserror = "1.0"
bincode = "1.3"
log = { workspace = true }
futures = "0.3"
arrayvec = { workspace = true }
sha2 = { workspace = true }
