[package]
name = "route-weaver-router"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
route-weaver-common = { path = "../common" }
tokio = { version = "1.36", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "rt-multi-thread",
    "time",
] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
snow = { workspace = true }
once_cell = "1.19"
simple_logger = "4.3"
log = { workspace = true }
either = "1.10"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.12"
lru = "0.12"
ringbuf = "0.3"

# Multiplatform transports
route-weaver-tcp-transport = { path = "../plugins/tcp-transport", optional = true }

# Unix only transports
[target.'cfg(target_family = "unix")'.dependencies]
route-weaver-unix-transport = { path = "../plugins/unix-transport", optional = true }

# Linux only transports
[target.'cfg(target_os = "linux")'.dependencies]
route-weaver-bluetooth-transport = { path = "../plugins/bluetooth-transport", optional = true }

[features]
default = ["tcp-transport", "unix-transport", "bluetooth-transport"]
tcp-transport = ["route-weaver-tcp-transport"]
unix-transport = ["route-weaver-unix-transport"]
bluetooth-transport = ["route-weaver-bluetooth-transport"]
