[package]
name = "route-weaver-router"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
route-weaver-common = { path = "../common" }
tokio = { version = "1.36", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "rt-multi-thread",
    "time",
    "tracing",
    "fs",
] }
tokio-util = { version = "0.7", features = ["codec"] }
console-subscriber = "0.2"
futures = "0.3"
snow = { workspace = true }
simple_logger = "4.3"
log = { workspace = true }
either = "1.10"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
lru = "0.12"
ringbuf = "0.3"
toml = "0.8"
once_cell = { workspace = true }
tower = { workspace = true }
tokio-tower = { workspace = true }
serde_with = { workspace = true }
async-bincode = { workspace = true }
rand = "0.8"

# Multiplatform transports
route-weaver-tcp-transport = { path = "../transports/tcp-transport", optional = true }

# Unix only transports
[target.'cfg(target_family = "unix")'.dependencies]
route-weaver-unix-transport = { path = "../transports/unix-transport", optional = true }

# Linux only transports
[target.'cfg(target_os = "linux")'.dependencies]
route-weaver-bluetooth-transport = { path = "../transports/bluetooth-transport", optional = true }

[features]
default = ["tcp-transport", "unix-transport", "bluetooth-transport"]
tcp-transport = ["route-weaver-tcp-transport"]
unix-transport = ["route-weaver-unix-transport"]
bluetooth-transport = ["route-weaver-bluetooth-transport"]
