[package]
name = "route-weaver-tcp-transport"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
route-weaver-common = { path = "../../common" }
tokio = { version = "1.36", features = ["net"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
log = { workspace = true }
socket2 = { version = "0.5", features = ["all"] }
