[package]
name = "route-weaver-unix-transport"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
route-weaver-common = { path = "../../common" }
tokio = { version = "1.36", features = ["net", "fs"] }
async-trait = "0.1"
log = { workspace = true }
